@@ -16,6 +16,8 @@
 	- python: permit rpm.fi() analogue to hdr.fiFromHeader() creator.
 	- silently add default %defattr(-,root,root) for all packages.
 	- fix: don't set handler if SIG_IGN is already set (#134474).
+	- disable expensive header+payload verifies in default config.
+	- adjust digest/signature stats to count #pkgs and bytes.
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
